3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Implement feature request #821645 (change password command). This introduces 3 new
 player states, "entering current password", "new password", "confirm new password".
include/define.h: new states.
include/player.h: add new_password field.
include/sproto.h: new command prototype.
server/c_misc.c: new command.
server/commands.c: bind command.
socket/request.c: handle new states.
Ryo 2006-08-08

Implement feature request #1528641 (consecrate should change face of altar). This simply
 removes the altar, and add the god's altar. Note that the name of the altar should be
 altar_<god's name>, which seems to be the case everywhere.
 server/spell_effect.c
Ryo 2006-08-07

Tell player whether she's the transport's captain or not.
 server/apply.c
Ryo 2006-08-07

Commit patch #1389033 (Large-value coins) courtesy Lalo Martins
 server/shop.c: accept jade & amber coins, never give'em back.
Ryo 2006-08-07

Fix bug #1534727 (create_home_portals TRUE doesn't work)
 server/init.c: wrong variable changed.
Ryo 2006-08-05

Committed patch #1389432 (Per-race HallOfSelection) courtesy Lalo Martins.
Modified files:
 include/global.h
 common/init.c
 server/server.c player.c
Rebuilt archetypes and treasures.
Ryo 2006-08-05

plugins/cfpython/cfpython.c, plugins/cfpython/cfpython_object.c,
    plugins/cfpython/include/cfpython_object_private.h: Modify
    Crossfire_Object_wrap() to use the hash tables provided by hashtable.c
    to avoid creating more python wrapper objects than is needed.
Alex Schultz 2006-07-29

common/object.c: fix bug #1526364 (stacking Royal Guards). Use find_free_spot